Change default locations to user home